Fix Network tests